--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,7 @@ blockchain.private.key=3843be5dcfe61ece0a43b244fd4f42c6e2ca2abdb9a0f1820f666bb97
 #blockchain.rpc.url=https://sepolia.infura.io/v3/3a699b648b924eaf8f0263bbb862578e
 
 
+spring.main.allow-circular-references=true
+
+
 
